@@ -1,3 +1,5 @@
+* Added option to disable highlight in GafferUI.Button
+
 * Fixed exception caused by undefined subMenuDefinition in GafferUI.Menu
 
 * Catching all exception types in ErrorDialogue
